update logo partner, fix intro image on safari & remove share button

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -162,11 +162,11 @@ section {
   height: 100vh;
 } */
 
-section img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+// section img {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+// }
 
 .intro-gate-left {
     position: fixed;
